<resources>
    <string name="app_name">PostTest</string>
    <string name="tab_text_1">ALL</string>
    <string name="tab_text_2">FAVORITES</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="menu_vector_path" translatable="false">M20 30,L80 30,M20 50,L80 50,M20 70,L80 70</string>
    <string name="back_vector_path" translatable="false">M50 25,L80 50,M20 50,L80 50,M50 75,L80 50</string>
    <string name="add_vector_path" translatable="false">M50 20,L50 80,M20 50,L80 50</string>
    <string name="remove_vector_path" translatable="false">M60 25,L75 45,M25 75,L60 25</string>
    <string name="userTitle">User</string>
    <string name="userNameText">Name: %1$s</string>
    <string name="userEmailText">Email: %1$s</string>
    <string name="userPhoneText">Phone: %1$s</string>
    <string name="userWebsiteText">Website: %1$s</string>
    <string name="detailDescriptionTitle">Description</string>
    <string name="detailCommentsTitle">COMMENTS</string>
</resources>
